# 2025-1-CV-Term-Project

./: .gitignore  CMakeLists.txt  package.xml
assets/: cloth.xml  mjmodel.xml  param.yaml  robot_0.xml  robot_1.xml  robot_2.xml  robot_3.xml  scene.xml
launch/: complete_sim.launch  generate_launch_from_scene.py
logs/: plot_logs.m
msg/: clothMask.msg  mesh.msg  robotData.msg  robotMeasurement.msg  robotState.msg  robotWrench.msg  setpoint.msg
scripts/: image_segmentor  mesh_visualizer  trajectory_generator
scripts/utils/: math_utils.py
src/mesh_estimator/: image_segmentor.txt  main.cpp  mesh_estimator.cpp  mesh_estimator.hpp
src/mesh_estimator/ros_io/: error_publisher.cpp  error_publisher.hpp  initial_mesh_subscriber.cpp  initial_mesh_subscriber.hpp  mask_subscriber.cpp  mask_subscriber.hpp  measurement_subscriber.cpp  measurement_subscriber.hpp  param_subscriber.cpp  param_subscriber.hpp
src/param_estimator/: main.cpp  param_estimator.hpp
src/param_estimator/ros_io/: error_subscriber.hpp  param_publisher.cpp  param_publisher.hpp
src/simulator/: main.cpp  robot.cpp  robot.hpp  simulator.cpp  simulator.hpp
src/simulator/ros_io/: data_publisher.cpp  data_publisher.hpp  measurement_publisher.cpp  measurement_publisher.hpp  setpoint_subscriber.cpp  setpoint_subscriber.hpp  state_publisher.cpp  state_publisher.hpp  view_publisher.cpp  view_publisher.hpp
src/utils/: config.cpp  config.hpp  data_struct.cpp  data_struct.hpp  math.cpp  math.hpp  mesh_publisher.cpp  mesh_publisher.hpp
yolo_model/runs/segment/train/: args.yaml
